--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-<p>Pigeon ready !</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
+    integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
+    crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
+    integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
+    crossorigin=""></script>
+    <style>
+      #map { height: 320px; }
+    </style>
+      <script>
+        var map;
+        var uid = Math.random().toString(36).slice(2);
+        var geojson_intersection = L.geoJSON();
+
+        function getPigeon(e) {
+          coords = e.latlng
+          fetch(window.location.origin+"?lat="+coords.lat+"&lng="+coords.lng+"&uid="+uid).then(function(response) {
+            return response.json();
+          }).then(function(data) {
+            document.getElementById("description").innerHTML = data[1].txt.replace(/\n/g, "<br/>");
+            geojson_intersection.clearLayers()
+            geojson_intersection.addData(JSON.parse(data[2]))
+          }).catch(function() {
+            console.log("Request fail");
+          });
+        }
+
+        function init() {
+          map= L.map('map').setView([46.8, 2.52], 6);
+          L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            maxZoom: 19,
+            attribution: '© OpenStreetMap'
+          }).addTo(map);
+
+          geojson_intersection.addTo(map);
+
+          map.on("click", getPigeon);
+        }
+      </script>
+  </head>
+  <body onload=init()>
+    <div id="map"></div>
+    <div id="description"></div>
+  </body>
+</html> 
