--- a/static/index.html
+++ b/static/index.html
@@ -16,10 +16,18 @@
     <div id="map"></div>
     <div id="content">
       <div id="text">
-        <p>Cliquez au centre d'un carrefour sur la carte pour en obtenir une description textuelle. La carte affiche la segmentation du carrefour décrit.<br/><br/>Vous pouvez utiliser les réglages avancés si la segmentation du carrefour est incorrecte, en jouant en priorité sur le rayon élémentaire.</p>
+        <p>
+          Cliquez au centre d'un carrefour sur la carte pour en obtenir une description textuelle. La carte affiche la segmentation du carrefour décrit.<br/><br/>
+          Vous pouvez utiliser les réglages avancés si la segmentation du carrefour est incorrecte, en jouant en priorité sur le rayon élémentaire.<br/><br/>
+          La section commentaire vous permet si vous le souhaitez de nous transmettre votre avis sur la description générée au regard de la réalité du terrain et de vos pratiques.
+        </p>
       </div>
       <div id="advanced">
-        <button id="advanced_button" class="button" onclick=toggleSettings()>Avancé</button>
+        <button id="comment_button" class="button" onclick=toggleComment()>Commentaire</button> <button id="advanced_button" class="button" onclick=toggleSettings()>Avancé</button>
+        <div id="comment">
+          <textarea id="comment_text" rows="4" oninput="updateSendButton(this.value)"></textarea>
+          <span><button id="send_button" class="button_disabled" disabled onclick=sendComment()>Envoyer</button></span>
+        </div>
         <div id="settings">
           <span><label>Rayon élémentaire (C0) : </label><label id="C0val">2</label></span>
           <input id="C0" class="slider" type="range" id="volume" name="volume" min="0.1" max="10" value="2" step="0.1" oninput="updateSlider(this, this.value)">
