--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,7 @@
     crossorigin=""></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/randomcolor/0.6.1/randomColor.min.js"></script>
     <link rel="stylesheet" href="static/css/index.css">
+    <script src="static/js/fetchTimeout.js"></script>
     <script src="static/js/index.js"></script>
   </head>
   <body onload=init()>
