Add popup that prints the description when clicking on a feature.

--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,10 @@
   </head>
   <body onload=init()>
     <div id="map"></div>
+    <div id="popup" class="ol-popup">
+      <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+      <div id="popup-content"></div>
+    </div>
     <div id="content">
       <div id="text">
         <p>
