--- a/static/index.html
+++ b/static/index.html
@@ -38,7 +38,7 @@
             <span><label>Longueur boucle de fusion (C2) : </label><label id="C2val">4</label></span>
             <input id="C2" class="slider" type="range" id="volume" name="volume" min="0.1" max="8" value="4" step="0.1" oninput="updateSlider(this, this.value)">
           </div>
-          <span id="settings_buttons"><button id="reload_button" class="button_disabled" disabled onclick=reloadPigeon()>Recharger</button><button id="reset_button" class="button" onclick=resetSliders()>Réinitialiser</button><button id="download_button" class="button_disabled" disabled onclick=downloadData()>Télécharger</button></span>
+          <span id="settings_buttons"><button id="reload_button" class="button_disabled" disabled onclick=reloadApi()>Recharger</button><button id="reset_button" class="button" onclick=resetSliders()>Réinitialiser</button><button id="download_button" class="button_disabled" disabled onclick=downloadData()>Télécharger</button></span>
         </div>
       </div>
     </div>
